tests/NormalTests/paczka1/small_fuzzy/93905522.err
Error in line 9: DhnQVC A0 13,9
Error in line 10: DhnQVC A0 81,7
Error in line 12: DhnQVC A0 116,0
Error in line 7: DhnQVC A55 49,5
